--- a/app/src/main/res/layout/activity_menu_list.xml
+++ b/app/src/main/res/layout/activity_menu_list.xml
@@ -7,11 +7,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MenuListActivity">
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:background="@color/purple_500"
-            android:layout_height="?attr/actionBarSize" />
+<!--        <androidx.appcompat.widget.Toolbar-->
+<!--            android:id="@+id/toolbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:background="@color/purple_500"-->
+<!--            android:layout_height="?attr/actionBarSize" />-->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvMenuList"
             android:layout_width="match_parent"
