--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -39,7 +39,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_roundprofilepicture" />
+                android:src="@drawable/profile2" />
 
             <TextView
                 android:id="@+id/profileName"
@@ -80,7 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:text="Edge Endaz"
+
                 android:textColor="@color/black" />
 
             <TextView
@@ -94,22 +94,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:text="prelookstudio@gmail.com"
+
                 android:textColor="@color/black" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:text="Phone number" />
-
-            <TextView
-                android:id="@+id/txtPhone"
-                android:layout_width="356dp"
-                android:layout_height="39dp"
-                android:inputType="text"
-                android:text="(+84) 3723 4221"
-                android:textColor="@color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -122,7 +109,19 @@
                 android:layout_width="356dp"
                 android:layout_height="39dp"
                 android:inputType="text"
+
                 android:textColor="@color/black" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/logoutBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/rounded_button"
+                android:backgroundTint="@color/orange"
+                android:ems="10"
+                android:text="Logout" />
 
         </LinearLayout>
     </RelativeLayout>
